[gd_scene load_steps=6 format=2]

[ext_resource path="res://42/light.png" type="Texture" id=1]
[ext_resource path="res://lightning/Lightning.gd" type="Script" id=2]
[ext_resource path="res://lightning/thunder_1.wav" type="AudioStream" id=3]
[ext_resource path="res://lightning/thunder_2.wav" type="AudioStream" id=4]
[ext_resource path="res://lightning/thunder_3.wav" type="AudioStream" id=5]

[node name="Lightning" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 2, 2 )
enabled = false
texture = ExtResource( 1 )

[node name="Thunder_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Thunder_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Thunder_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
